Add direct GitHub OTA update system with real-time progress tracking
Implements a complete OTA update solution that allows users to install firmware directly from GitHub releases with one click, bypassing CORS restrictions and providing real-time feedback.

Backend changes:
- Add POST /api/system/OTA/github endpoint in handler_ota.cpp
- Implement backend proxy that downloads firmware from GitHub and streams directly to ESP32 flash partition
- Use esp_https_ota API for automatic redirect handling and SSL/TLS support
- Optimize HTTP buffer sizes (8192 bytes) to handle large firmware files (2.8MB+)
- Add progress logging every 5% via ESP_LOGI for WebSocket broadcasting
- Include esp_https_ota component in CMakeLists.txt dependencies

Frontend enhancements:
- Add automatic version checking on settings page load
- Implement semantic version comparison (e.g., v1.0.33 vs v1.0.34)
- Display color-coded status badges: green (up-to-date), orange (update available), red (outdated)
- Show release information with changelog parsing (markdown to HTML)
- Add one-click "Install from GitHub" button with device model auto-detection
- Subscribe to WebSocket for real-time OTA progress updates (0%, 5%, 10%, ..., 100%)
- Implement automatic page refresh after device reboot using polling mechanism
- Display reboot progress counter (attempt X/60) with timeout handling

UI improvements:
- Replace modal overlay with inline progress indicators
- Show status messages: "Initializing...", "Downloading and installing: X%", "Rebooting..."
- Add device model normalization (γ→Gamma, preserve + characters)
- Filter out factory builds from automatic file selection
- Maintain manual file upload as fallback option

Internationalization:
- Add complete translations for UPDATE section (FR, EN, ES, DE)
- Translate all toast notifications (success, error, warnings)
- Support dynamic translation keys for update status badges
- Translate progress messages and reboot status indicators

Technical details:
- No 

--- a/main/http_server/axe-os/src/assets/i18n/de.json
+++ b/main/http_server/axe-os/src/assets/i18n/de.json
@@ -292,7 +292,44 @@
     "SHARES_ACCEPTED": "Anteile Akzeptiert",
     "SHARES_REJECTED": "Anteile Abgelehnt",
     "VOLTAGE_REGULATOR_TEMPERATURE": "Spannungsregler-Temperatur",
-    "BEST_SESSION_DIFF": "Beste Sitzungsschwierigkeit"
+    "BEST_SESSION_DIFF": "Beste Sitzungsschwierigkeit",
+    "VERSION_INFO": "Versionsinformationen",
+    "PUBLISHED": "Veröffentlicht",
+    "STATUS_UP_TO_DATE": "Auf dem neuesten Stand",
+    "STATUS_UPDATE_AVAILABLE": "Update verfügbar",
+    "STATUS_OUTDATED": "Veraltet",
+    "STATUS_UNKNOWN": "Unbekannt",
+    "SHOW_CHANGELOG": "Änderungsprotokoll anzeigen",
+    "HIDE_CHANGELOG": "Änderungsprotokoll ausblenden",
+    "DIRECT_FROM_GITHUB": "Direkt von GitHub",
+    "INSTALL_FROM_GITHUB": "Von GitHub installieren",
+    "MANUAL_FILE": "Manuelle Datei",
+    "STEP_DOWNLOADING": "Herunterladen",
+    "STEP_UPLOADING": "Hochladen",
+    "STEP_FLASHING": "Flashen",
+    "AVAILABLE_FILES": "Verfügbare Dateien",
+    "INITIALIZING": "Initialisierung...",
+    "DOWNLOADING_AND_INSTALLING": "Herunterladen und installieren",
+    "INSTALLATION_COMPLETE": "Installation abgeschlossen, Neustart...",
+    "REBOOTING": "Neustart läuft...",
+    "REBOOT_COMPLETE": "Neustart abgeschlossen, Seite wird neu geladen...",
+    "REBOOT_TAKING_LONG": "Der Neustart dauert länger als erwartet. Bitte manuell aktualisieren."
+  },
+  "TOAST": {
+    "SUCCESS": "Erfolg",
+    "ERROR": "Fehler",
+    "WARNING": "Warnung",
+    "SAVED": "Gespeichert",
+    "COULD_NOT_SAVE": "Speichern fehlgeschlagen",
+    "NO_FILE_SELECTED": "Keine Datei ausgewählt",
+    "INCORRECT_FILE": "Falsche Datei, erwartet",
+    "FIRMWARE_UPDATED": "Firmware erfolgreich aktualisiert",
+    "WEBSITE_UPDATED": "Weboberfläche erfolgreich aktualisiert",
+    "UPLOAD_FAILED": "Upload fehlgeschlagen",
+    "NO_RELEASE_INFO": "Keine Versionsinformationen verfügbar",
+    "UPDATE_FAILED": "Aktualisierung fehlgeschlagen",
+    "DEVICE_RESTARTED": "Gerät neu gestartet",
+    "RESTART_FAILED": "Neustart des Geräts fehlgeschlagen"
   },
   "WIFI": {
     "TITLE": "WiFi-Einstellungen",
