--- a/main/http_server/axe-os/src/assets/i18n/en.json
+++ b/main/http_server/axe-os/src/assets/i18n/en.json
@@ -269,8 +269,10 @@
   },
   "UPDATE": {
     "TITLE": "Updates",
+    "VERSION_INFO": "Version Information",
     "CURRENT_VERSION": "Current Version",
     "LATEST_RELEASE": "Latest Release",
+    "PUBLISHED": "Published",
     "CHECK": "Check",
     "UPDATE_FIRMWARE": "Update Firmware",
     "UPDATE_WEBSITE": "Update Website",
@@ -292,7 +294,42 @@
     "SHARES_ACCEPTED": "Shares Accepted",
     "SHARES_REJECTED": "Shares Rejected",
     "VOLTAGE_REGULATOR_TEMPERATURE": "Voltage Regulator Temperature",
-    "BEST_SESSION_DIFF": "Best Session Diff"
+    "BEST_SESSION_DIFF": "Best Session Diff",
+    "STATUS_UP_TO_DATE": "Up to date",
+    "STATUS_UPDATE_AVAILABLE": "Update available",
+    "STATUS_OUTDATED": "Outdated",
+    "STATUS_UNKNOWN": "Unknown",
+    "SHOW_CHANGELOG": "Show Changelog",
+    "HIDE_CHANGELOG": "Hide Changelog",
+    "DIRECT_FROM_GITHUB": "Direct from GitHub",
+    "INSTALL_FROM_GITHUB": "Install from GitHub",
+    "MANUAL_FILE": "Manual File Upload",
+    "STEP_DOWNLOADING": "Downloading",
+    "STEP_UPLOADING": "Uploading",
+    "STEP_FLASHING": "Flashing",
+    "AVAILABLE_FILES": "Available Files",
+    "INITIALIZING": "Initializing...",
+    "DOWNLOADING_AND_INSTALLING": "Downloading and installing",
+    "INSTALLATION_COMPLETE": "Installation complete, rebooting...",
+    "REBOOTING": "Rebooting...",
+    "REBOOT_COMPLETE": "Reboot complete, reloading page...",
+    "REBOOT_TAKING_LONG": "Reboot is taking longer than expected. Please refresh manually."
+  },
+  "TOAST": {
+    "SUCCESS": "Success",
+    "ERROR": "Error",
+    "WARNING": "Warning",
+    "SAVED": "Saved",
+    "COULD_NOT_SAVE": "Could not save",
+    "NO_FILE_SELECTED": "No file selected",
+    "INCORRECT_FILE": "Incorrect file, expected",
+    "FIRMWARE_UPDATED": "Firmware updated successfully",
+    "WEBSITE_UPDATED": "Website updated successfully",
+    "UPLOAD_FAILED": "Upload failed",
+    "NO_RELEASE_INFO": "No release information available",
+    "UPDATE_FAILED": "Update failed",
+    "DEVICE_RESTARTED": "Device restarted",
+    "RESTART_FAILED": "Failed to restart device"
   },
   "WIFI": {
     "TITLE": "WiFi Settings",
