--- a/main/http_server/axe-os/src/assets/i18n/fr.json
+++ b/main/http_server/axe-os/src/assets/i18n/fr.json
@@ -269,8 +269,10 @@
   },
   "UPDATE": {
     "TITLE": "Mises à jour",
+    "VERSION_INFO": "Informations de Version",
     "CURRENT_VERSION": "Version Actuelle",
     "LATEST_RELEASE": "Dernière Version",
+    "PUBLISHED": "Publiée",
     "CHECK": "Vérifier",
     "UPDATE_FIRMWARE": "Mettre à jour le Firmware",
     "UPDATE_WEBSITE": "Mettre à jour le Site Web",
@@ -292,7 +294,42 @@
     "SHARES_ACCEPTED": "Parts Acceptées",
     "SHARES_REJECTED": "Parts Rejetées",
     "VOLTAGE_REGULATOR_TEMPERATURE": "Température du Régulateur de Tension",
-    "BEST_SESSION_DIFF": "Meilleure Difficulté de Session"
+    "BEST_SESSION_DIFF": "Meilleure Difficulté de Session",
+    "STATUS_UP_TO_DATE": "À jour",
+    "STATUS_UPDATE_AVAILABLE": "Mise à jour disponible",
+    "STATUS_OUTDATED": "Obsolète",
+    "STATUS_UNKNOWN": "Inconnu",
+    "SHOW_CHANGELOG": "Afficher le Changelog",
+    "HIDE_CHANGELOG": "Masquer le Changelog",
+    "DIRECT_FROM_GITHUB": "Directement depuis GitHub",
+    "INSTALL_FROM_GITHUB": "Installer depuis GitHub",
+    "MANUAL_FILE": "Fichier Manuel",
+    "STEP_DOWNLOADING": "Téléchargement",
+    "STEP_UPLOADING": "Envoi",
+    "STEP_FLASHING": "Flash",
+    "AVAILABLE_FILES": "Fichiers Disponibles",
+    "INITIALIZING": "Initialisation...",
+    "DOWNLOADING_AND_INSTALLING": "Téléchargement et installation",
+    "INSTALLATION_COMPLETE": "Installation terminée, redémarrage...",
+    "REBOOTING": "Redémarrage en cours...",
+    "REBOOT_COMPLETE": "Redémarrage terminé, rechargement de la page...",
+    "REBOOT_TAKING_LONG": "Le redémarrage prend plus de temps que prévu. Veuillez rafraîchir manuellement."
+  },
+  "TOAST": {
+    "SUCCESS": "Succès",
+    "ERROR": "Erreur",
+    "WARNING": "Avertissement",
+    "SAVED": "Enregistré",
+    "COULD_NOT_SAVE": "Impossible d'enregistrer",
+    "NO_FILE_SELECTED": "Aucun fichier sélectionné",
+    "INCORRECT_FILE": "Fichier incorrect, attendu",
+    "FIRMWARE_UPDATED": "Firmware mis à jour avec succès",
+    "WEBSITE_UPDATED": "Interface mise à jour avec succès",
+    "UPLOAD_FAILED": "Échec du téléversement",
+    "NO_RELEASE_INFO": "Aucune information de version disponible",
+    "UPDATE_FAILED": "Échec de la mise à jour",
+    "DEVICE_RESTARTED": "Appareil redémarré",
+    "RESTART_FAILED": "Échec du redémarrage de l'appareil"
   },
   "WIFI": {
     "TITLE": "Paramètres WiFi",
