--- a/main/http_server/axe-os/src/assets/i18n/de.json
+++ b/main/http_server/axe-os/src/assets/i18n/de.json
@@ -89,6 +89,7 @@
     "PORT": "Port",
     "USER": "Benutzer",
     "PING": "Ping",
+    "LOSS": "Verlust",
     "DIFF": "Schwierigkeit",
     "PRIMARY": "Primär",
     "FALLBACK": "Fallback"
