--- a/main/http_server/axe-os/src/assets/i18n/es.json
+++ b/main/http_server/axe-os/src/assets/i18n/es.json
@@ -89,6 +89,7 @@
     "PORT": "Puerto",
     "USER": "Usuario",
     "PING": "Ping",
+    "LOSS": "Pérdida",
     "DIFF": "Dificultad",
     "PRIMARY": "Primario",
     "FALLBACK": "Respaldo"
