--- a/main/http_server/axe-os/src/assets/i18n/fr.json
+++ b/main/http_server/axe-os/src/assets/i18n/fr.json
@@ -89,6 +89,7 @@
     "PORT": "Port",
     "USER": "Utilisateur",
     "PING": "Ping",
+    "LOSS": "Perte",
     "DIFF": "Difficulté",
     "PRIMARY": "Primaire",
     "FALLBACK": "Secours"
