--- a/main/http_server/axe-os/src/assets/i18n/en.json
+++ b/main/http_server/axe-os/src/assets/i18n/en.json
@@ -89,6 +89,7 @@
     "PORT": "Port",
     "USER": "User",
     "PING": "Ping",
+    "LOSS": "Loss",
     "DIFF": "Diff",
     "PRIMARY": "Primary",
     "FALLBACK": "Fallback"
