--- a/main/http_server/axe-os/src/assets/i18n/fr.json
+++ b/main/http_server/axe-os/src/assets/i18n/fr.json
@@ -182,7 +182,9 @@
     "RESET_DEEPSLEEP": "Sortie de veille profonde",
     "RESET_BROWNOUT": "Redémarrage par chute de tension",
     "RESET_SDIO": "Redémarrage SDIO",
-    "RESET_NOT_SPECIFIED": "Non spécifié"
+    "RESET_NOT_SPECIFIED": "Non spécifié",
+    "ABOUT_NERDQX": " projet a été développé par une équipe internationale de passionnés et publié en tant que matériel libre. NerdQX fait partie de l'initiative <strong>«ORIGINAL»</strong>, qui permet aux utilisateurs de vérifier si leur NerdQX est un produit original. Pour en savoir plus, cliquez",
+    "ABOUT_NERDQX_ORIGINAL": " <u>ici</u>"
   },
   "SWARM": {
     "TITLE": "Gestion d'Essaim",
