--- a/main/http_server/axe-os/src/assets/i18n/de.json
+++ b/main/http_server/axe-os/src/assets/i18n/de.json
@@ -326,7 +326,10 @@
     "STEP_UPDATING_WWW": "WWW wird aktualisiert",
     "STEP_REBOOTING": "Neustart...",
     "STEP_ERROR": "Fehler",
-    "STEP_UNKNOWN": "Unbekannt"
+    "STEP_UNKNOWN": "Unbekannt",
+    "RELEASE_AND_UPDATE": "Release & Update",
+    "EXPECTED_FILE": "Erwartete Datei",
+    "SELECT_RELEASE": "Release auswählen"
   },
   "TOAST": {
     "SUCCESS": "Erfolg",
