--- a/main/http_server/axe-os/src/assets/i18n/en.json
+++ b/main/http_server/axe-os/src/assets/i18n/en.json
@@ -326,7 +326,10 @@
     "STEP_UPDATING_WWW": "Updating web content",
     "STEP_REBOOTING": "Rebooting...",
     "STEP_ERROR": "Error",
-    "STEP_UNKNOWN": "Unknown"
+    "STEP_UNKNOWN": "Unknown",
+    "RELEASE_AND_UPDATE": "Release & Update",
+    "EXPECTED_FILE": "Expected file",
+    "SELECT_RELEASE": "Select release"
   },
   "TOAST": {
     "SUCCESS": "Success",
