--- a/main/http_server/axe-os/src/assets/i18n/fr.json
+++ b/main/http_server/axe-os/src/assets/i18n/fr.json
@@ -326,7 +326,10 @@
     "STEP_UPDATING_WWW": "Mise à jour du site web",
     "STEP_REBOOTING": "Redémarrage...",
     "STEP_ERROR": "Erreur",
-    "STEP_UNKNOWN": "Inconnu"
+    "STEP_UNKNOWN": "Inconnu",
+    "RELEASE_AND_UPDATE": "Version et mise à jour",
+    "EXPECTED_FILE": "Fichier attendu",
+    "SELECT_RELEASE": "Sélectionner la version"
   },
   "TOAST": {
     "SUCCESS": "Succès",
