added suspends to tasks to stop them on shutdown

--- a/main/http_server/axe-os/src/assets/i18n/en.json
+++ b/main/http_server/axe-os/src/assets/i18n/en.json
@@ -85,7 +85,7 @@
     "MS": "ms"
   },
   "POOL_INFO": {
-    "TITLE": "Pool (Primary)",
+    "TITLE": "Pool",
     "HOST": "Host",
     "PORT": "Port",
     "USER": "User",
