a little bit polishing, adding a permanently disabled checkbox for wipe configuration

--- a/main/http_server/axe-os/src/assets/i18n/de.json
+++ b/main/http_server/axe-os/src/assets/i18n/de.json
@@ -330,7 +330,9 @@
     "RELEASE_AND_UPDATE": "Release & Update",
     "EXPECTED_FILE": "Erwartete Datei",
     "SELECT_RELEASE": "Release auswählen",
-    "FILENAME": "Dateiname"
+    "FILENAME": "Dateiname",
+    "KEEP_CONFIG": "Einstellungen beibehalten",
+    "SHOW_PRERELEASES": "Vorabversionen anzeigen"
   },
   "TOAST": {
     "SUCCESS": "Erfolg",
