--- a/main/http_server/axe-os/src/assets/i18n/fr.json
+++ b/main/http_server/axe-os/src/assets/i18n/fr.json
@@ -330,7 +330,9 @@
     "RELEASE_AND_UPDATE": "Version et mise à jour",
     "EXPECTED_FILE": "Fichier attendu",
     "SELECT_RELEASE": "Sélectionner la version",
-    "FILENAME": "Nom de fichier"
+    "FILENAME": "Nom de fichier",
+    "KEEP_CONFIG": "Conserver les paramètres",
+    "SHOW_PRERELEASES": "Afficher les versions préliminaires"
   },
   "TOAST": {
     "SUCCESS": "Succès",
