made the banner less alerting^^ changed some texts to make clear sessions trust is for browsers

--- a/main/http_server/axe-os/src/assets/i18n/de.json
+++ b/main/http_server/axe-os/src/assets/i18n/de.json
@@ -479,20 +479,20 @@
     "LOCAL_ONLY": "Für die lokale LAN-Nutzung konzipiert (ohne HTTPS). Nicht ins Internet exponieren.",
     "OTP_HINT_ENROLLMENT": "Starte die Registrierung, um einen QR-Code auf dem Gerät anzuzeigen. Scanne ihn mit deinem Authenticator (z. B. Authy/Google Authenticator) und gib danach den 6-stelligen Code ein, um OTP zu aktivieren. Zum Deaktivieren ist ebenfalls ein gültiger Code erforderlich. Nur für lokales LAN gedacht (ohne HTTPS).",
     "OTP_NUDGE_TITLE": "Bitte erwäge, OTP zu aktivieren",
-    "OTP_NUDGE_TEXT": "Es reduziert opportunistische und automatisierte Angriffe und ergänzt diese Weboberfläche um eine grundlegende, echte kryptografische Schutzschicht.",
+    "OTP_NUDGE_TEXT": "Die Weboberfläche ist ungeschützt – aktiviere OTP für zusätzlichen Schutz.",
     "OTP_TITLE": "OTP erforderlich",
     "OTP_FW_HINT": "Gib den 6-stelligen Code ein, um das Firmware-Update zu starten.",
     "OTP_HINT": "Gib den 6-stelligen Code ein, um fortzufahren.",
     "OTP_DISABLE_HINT": "Gib den 6-stelligen Code ein, um OTP zu deaktivieren.",
     "OTP_ENABLE_HINT": "Gib den 6-stelligen Code ein, um OTP zu aktivieren.",
-    "OTP_REMEMBER": "Dieses Gerät für 24 Stunden merken",
+    "OTP_REMEMBER": "Diesen Browser 24 h merken",
     "SESSION": "Sitzung",
     "SESSION_STATUS": "Sitzungsstatus",
-    "THIS_DEVICE_TRUSTED": "Dieses Gerät ist vertrauenswürdig (24h)",
-    "FORGET_THIS_DEVICE": "Dieses Gerät vergessen",
-    "FORGET_THIS_DEVICE_HELP": "Beendet die 24-h-Vertrauensstellung für dieses Gerät. Das lokale Sitzungstoken wird gelöscht – beim nächsten geschützten Vorgang ist wieder ein 6-stelliger Code nötig.",
-    "THIS_DEVICE_FORGOTTEN": "Dieses Gerät wurde vergessen.",
-    "NO_TRUSTED_DEVICE_HELP": "Keine vertrauenswürdige Sitzung auf diesem Gerät. Geschützte Aktionen verlangen einen 6-stelligen Code, bis du „Dieses Gerät merken“ wählst.",
+    "THIS_DEVICE_TRUSTED": "Dieser Browser ist vertrauenswürdig (24 h)",
+    "FORGET_THIS_DEVICE": "Diesen Browser vergessen",
+    "FORGET_THIS_DEVICE_HELP": "Beendet das 24-Stunden-Vertrauen für diesen Browser. Das lokale Sitzungstoken wird entfernt – bei der nächsten geschützten Aktion ist erneut ein 6-stelliger Code erforderlich.",
+    "THIS_DEVICE_FORGOTTEN": "Dieser Browser wurde vergessen.",
+    "NO_TRUSTED_DEVICE_HELP": "Keine vertrauenswürdige Sitzung in diesem Browser. Geschützte Aktionen erfordern einen 6-stelligen Code, bis du „Diesen Browser merken“ auswählst.",
     "NOT_TRUSTED": "Nicht vertrauenswürdig"
   }
 }
