--- a/main/http_server/axe-os/src/assets/i18n/en.json
+++ b/main/http_server/axe-os/src/assets/i18n/en.json
@@ -20,7 +20,8 @@
     "SUBMIT": "Submit",
     "ERROR": "Error",
     "SUCCESS": "Success",
-    "JUST_NOW": "Just now"
+    "JUST_NOW": "Just now",
+    "SHUTDOWN": "Miner has been shut down."
   },
   "NAVIGATION": {
     "HOME": "Home",
