--- a/main/http_server/axe-os/src/assets/i18n/es.json
+++ b/main/http_server/axe-os/src/assets/i18n/es.json
@@ -20,7 +20,8 @@
     "SUBMIT": "Enviar",
     "ERROR": "Error",
     "SUCCESS": "Éxito",
-    "JUST_NOW": "Ahora mismo"
+    "JUST_NOW": "Ahora mismo",
+    "SHUTDOWN": "El minero se ha apagado."
   },
   "NAVIGATION": {
     "HOME": "Inicio",
