--- a/main/http_server/axe-os/src/assets/i18n/fr.json
+++ b/main/http_server/axe-os/src/assets/i18n/fr.json
@@ -20,7 +20,8 @@
     "SUBMIT": "Soumettre",
     "ERROR": "Erreur",
     "SUCCESS": "Succès",
-    "JUST_NOW": "À l'instant"
+    "JUST_NOW": "À l'instant",
+    "SHUTDOWN": "Le mineur a été arrêté."
   },
   "NAVIGATION": {
     "HOME": "Accueil",
