switch graphs to chip register hashrate

--- a/main/http_server/axe-os/src/assets/i18n/de.json
+++ b/main/http_server/axe-os/src/assets/i18n/de.json
@@ -60,6 +60,7 @@
     "IDLE": "Leerlauf",
     "PRIMARY_POOL": "Primärer Pool",
     "FALLBACK_POOL": "Fallback-Pool",
+    "HASHRATE_1M": "Hashrate 1min",
     "HASHRATE_10M": "Hashrate 10min",
     "HASHRATE_1H": "Hashrate 1h",
     "HASHRATE_1D": "Hashrate 1T"
