--- a/main/http_server/axe-os/src/assets/i18n/en.json
+++ b/main/http_server/axe-os/src/assets/i18n/en.json
@@ -60,6 +60,7 @@
     "IDLE": "Idle",
     "PRIMARY_POOL": "Primary Pool",
     "FALLBACK_POOL": "Fallback Pool",
+    "HASHRATE_1M": "Hashrate 1m",
     "HASHRATE_10M": "Hashrate 10m",
     "HASHRATE_1H": "Hashrate 1h",
     "HASHRATE_1D": "Hashrate 1d"
