--- a/main/http_server/axe-os/src/assets/i18n/fr.json
+++ b/main/http_server/axe-os/src/assets/i18n/fr.json
@@ -60,6 +60,7 @@
     "IDLE": "Inactif",
     "PRIMARY_POOL": "Pool Primaire",
     "FALLBACK_POOL": "Pool de Secours",
+    "HASHRATE_1M": "Hashrate 1min",
     "HASHRATE_10M": "Hashrate 10min",
     "HASHRATE_1H": "Hashrate 1h",
     "HASHRATE_1D": "Hashrate 1j"
