--- a/main/http_server/axe-os/src/assets/i18n/es.json
+++ b/main/http_server/axe-os/src/assets/i18n/es.json
@@ -60,10 +60,10 @@
     "IDLE": "Inactivo",
     "PRIMARY_POOL": "Pool Primario",
     "FALLBACK_POOL": "Pool de Respaldo",
-    "HASHRATE_1M": "Hashrate 1min",
-    "HASHRATE_10M": "Hashrate 10min",
-    "HASHRATE_1H": "Hashrate 1h",
-    "HASHRATE_1D": "Hashrate 1d"
+    "HASHRATE_1M": "Hashrate (1 min)",
+    "HASHRATE_10M": "Hashrate (10 min)",
+    "HASHRATE_1H": "Hashrate (1 h)",
+    "HASHRATE_1D": "Hashrate (1 d)"
   },
   "PERFORMANCE": {
     "TITLE": "Rendimiento",
