switch graphs to chip register hashrate (#384)
* switch graphs to chip register hashrate

* history switched to chip hashrate

* switched hashrate measuement to free-running counter

* some cleanup

* use bit7 of CRC to check if we received a job response or not

* added back 1d graph

* saving graph visibility to local browser store

* optimized psram usage for history

---------

Co-authored-by: Pmaxsd <pmaxsd80@gmail.com>

--- a/main/http_server/axe-os/src/assets/i18n/en.json
+++ b/main/http_server/axe-os/src/assets/i18n/en.json
@@ -60,9 +60,10 @@
     "IDLE": "Idle",
     "PRIMARY_POOL": "Primary Pool",
     "FALLBACK_POOL": "Fallback Pool",
-    "HASHRATE_10M": "Hashrate 10m",
-    "HASHRATE_1H": "Hashrate 1h",
-    "HASHRATE_1D": "Hashrate 1d"
+    "HASHRATE_1M": "Hashrate (1 m)",
+    "HASHRATE_10M": "Hashrate (10 m)",
+    "HASHRATE_1H": "Hashrate (1 h)",
+    "HASHRATE_1D": "Hashrate (1 d)"
   },
   "PERFORMANCE": {
     "TITLE": "Performance",
