--- a/main/http_server/axe-os/src/assets/i18n/de.json
+++ b/main/http_server/axe-os/src/assets/i18n/de.json
@@ -63,7 +63,8 @@
     "HASHRATE_1M": "Hashrate (1 min)",
     "HASHRATE_10M": "Hashrate (10 min)",
     "HASHRATE_1H": "Hashrate (1 std)",
-    "HASHRATE_1D": "Hashrate (1 Tag)"
+    "HASHRATE_1D": "Hashrate (1 Tag)",
+    "DUAL_POOL_BALANCE_WITH_STATUS": "Dual Pool {{primary}}/{{secondary}} ({{connected}}/2 online)"
   },
   "PERFORMANCE": {
     "TITLE": "Leistung",
@@ -128,7 +129,12 @@
     "DEFAULT": "Standard",
     "TIME_FORMAT": "Zeitformat",
     "TIME_FORMAT_24H": "24-Stunden-Format",
-    "TIME_FORMAT_12H": "12-Stunden-Format (AM/PM)"
+    "TIME_FORMAT_12H": "12-Stunden-Format (AM/PM)",
+    "POOL_MODE": "Pool-Modus",
+    "POOL_MODE_FAILOVER": "Failover (Primary/Fallback)",
+    "POOL_MODE_DUAL": "Dual-Pool",
+    "POOL_BALANCE": "Pool-Balance",
+    "POOL_BALANCE_HINT": "Verteilt Jobs zwischen Primary und Secondary Pool, z. B. 70/30."
   },
   "SYSTEM": {
     "TITLE": "Systeminformationen",
