--- a/main/http_server/axe-os/src/assets/i18n/en.json
+++ b/main/http_server/axe-os/src/assets/i18n/en.json
@@ -63,7 +63,8 @@
     "HASHRATE_1M": "Hashrate (1 m)",
     "HASHRATE_10M": "Hashrate (10 m)",
     "HASHRATE_1H": "Hashrate (1 h)",
-    "HASHRATE_1D": "Hashrate (1 d)"
+    "HASHRATE_1D": "Hashrate (1 d)",
+    "DUAL_POOL_BALANCE_WITH_STATUS": "Dual Pool {{primary}}/{{secondary}} ({{connected}}/2 online)"
   },
   "PERFORMANCE": {
     "TITLE": "Performance",
@@ -128,7 +129,12 @@
     "DEFAULT": "default",
     "TIME_FORMAT": "Time Format",
     "TIME_FORMAT_24H": "24-hour format",
-    "TIME_FORMAT_12H": "12-hour format (AM/PM)"
+    "TIME_FORMAT_12H": "12-hour format (AM/PM)",
+    "POOL_MODE": "Pool Mode",
+    "POOL_MODE_FAILOVER": "Failover (Primary/Fallback)",
+    "POOL_MODE_DUAL": "Dual Pool",
+    "POOL_BALANCE": "Pool Balance",
+    "POOL_BALANCE_HINT": "Distributes jobs between the primary and secondary pool, e.g., 70/30."
   },
   "SYSTEM": {
     "TITLE": "System Information",
